<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.AddContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_contact_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/et_Firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/firstname_row"
            android:paddingHorizontal="5dp"
            android:drawableEnd="@drawable/ic_person1"
            android:autofillHints="FIRST NAME"
            android:inputType="text"
            android:drawableRight="@drawable/ic_person1" />


        <EditText
            android:id="@+id/et_Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName_Placeholder"
            android:drawableEnd="@drawable/ic_person1"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableRight="@drawable/ic_person1" />


        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_placeholder"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableRight="@drawable/ic_email" />

        <EditText
            android:id="@+id/et_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ContactNumber_placeholder"
            android:drawableEnd="@drawable/ic_contact_phone"
            android:inputType="number"
            android:importantForAutofill="no"
            android:drawableRight="@drawable/ic_contact_phone" />



        <EditText
            android:id="@+id/et_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address_placeholder"
            android:drawableEnd="@drawable/ic_location"
            android:inputType="text"
            android:importantForAutofill="no"
            android:drawableRight="@drawable/ic_location" />


        <Button
            android:id="@+id/btn_add_Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/add_contact_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>